--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "\t",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start" : "node index"
+    "start" : "node index.js"
   },
   "author": "",
   "license": "ISC",
