--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "inotebook-backend",
   "version": "1.0.0",
   "description": "",
-  "main": "index",
+  "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start" : "node index.js"
